  (Also fix French dialog which was left out before.)
  Src: Merge.rc
  Src/Languages: */Merge*.rc
 PATCH: [ 1421199 ] Fix plugin menu for when location or diff detail view active
  Src: ChildFrm.cpp ChildFrm.h MainFrm.cpp MainFrm.h MergeDoc.cpp MergeDoc.h
 PATCH: [ 1414904 ] updated italian translation for winmerge 2.5.3.1
  Submitted by A. Decorte
  Src/Languages/Italian: MergeItalian.rc
  
2006-02-03 Perry
 PATCH: [ 1409651 ] fix diffutils handling trailing whitespace
  Src/diffutils/src: IO.C UTIL.C
 Current selftests status: Failure count: 24 (of 480)
  Failing -b t002 (u & m platforms, all 4 builds)
  Failing -bi t002 (u & m platforms, all 4 builds)
  Failing -b bug1406950 (u & m platforms, all 4 builds)

2006-02-03 Perry
 PATCH: [ 1423060 ] Modify perl selftest to test all 4 builds
 Changes to selftest
 Current selftests status: Failure count: 36 (of 480)
  Failing -b t002 (all 3 platforms, all 4 builds)
  Failing -bi t002 (all 3 platforms, all 4 builds)
  Failing -b bug1406950 (all 3 platforms, all 4 builds)
 PATCH: [ 1421694 ] Widen comments label in Rational ClearCase dialog
  Src: Merge.rc
  Src/Languages: */Merge*.rc
 PATCH: [ 1423461 ] Rearrange language select dialog
  Src: MainFrm.cpp MainFrm.h Merge.rc OpenDlg.cpp OpenDlg.h
  Src/Common: LanguageSelect.cpp LanguageSelect.h
  Src/Languages: */Merge*.rc

2006-02-02 Perry
 PATCH: [ 1422052 ] Correction of Swedish for 2.5.3.1+
 Contributed by Hans Eriksson
 Src/Languages/Swedish: Merge Swedish
 
2006-02-01 Perry
 PATCH: [ 1412386 ] Adding readme files
  New WinMerge/readme.txt
  (Various other directories affected -- readme.txt & Changes.txt files)

2006-02-01 Kimmo
 PATCH: [ 1419329 ] Select Line Difference
  Src: Merge.rc MergeDiffDetailView.cpp MergeDiffDetailView.h MergeEditView.cpp
   MergeEditView.h resource.h
  Src/Language: */Merge*.rc

2006-02-01 Perry
 BUG: [ 1419317 ] link error on 8-bit cvs trunk
  Add HtmlHelp.lib to link lines MergeRelease, MergeDebug, MergeUnicodeRelease.
  Src: Merge.dsp